@@ -23,6 +23,9 @@
         <java.version>17</java.version>
         <cql.version>3.29.0</cql.version>
         <hapi.fhir.version>7.0.0</hapi.fhir.version>
+        <mockito.version>5.14.2</mockito.version>
+        <byte-buddy.version>1.15.10</byte-buddy.version>
+        <jackson-bom.version>2.17.2</jackson-bom.version>
     </properties>
 
     <dependencies>
@@ -278,6 +281,13 @@
                             <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                 </configuration>
             </plugin>
             <plugin>
